@@ -1,0 +1,21 @@
+MD5 9c5ef1154377e1713facd636db56291a comix.tar.gz 100296
+RMD160 a6f436a2fac0402c0dfa03f45de224315b8e1da4 comix.tar.gz 100296
+SHA256 567a0672c74dd4a772b055affe271bc1a41654f2b4f533aae905cc13d571d58d comix.tar.gz 100296
+MD5 4dff942d859b9cac569d791c664e66a5 culmus-0.101.tar.gz 1058016
+RMD160 93246c3b3f5bf5b5c445c026c58f076fa81db338 culmus-0.101.tar.gz 1058016
+SHA256 5a274774c0386a5dc1230a0a6ae443d224174bab7d989d4c22b7ba687a1bd442 culmus-0.101.tar.gz 1058016
+MD5 410e999713f4214bf168ba44b7363164 dorian.tar.gz 19919
+RMD160 d22c1b69a92c2ba5ee9f676715c2db221c37f7ef dorian.tar.gz 19919
+SHA256 ba4131cb164f0376e0269825042c5f64b9dfcf6905426938ab4d197831454633 dorian.tar.gz 19919
+MD5 38aa8a0bc758e520ae91fd14801d46c8 gan.tar.gz 18076
+RMD160 8897f105e90485851485262617508ea81db24966 gan.tar.gz 18076
+SHA256 a51f4f0a1782d1c33d251b2f59b47401351d0bdf4b5b5c634b850b5c5004b08d gan.tar.gz 18076
+MD5 34c72b7ee66d38baddae31998000678c gladia.tar.gz 25336
+RMD160 ed91b9edaa98b3226ef2252bcce14595d6e276cf gladia.tar.gz 25336
+SHA256 6b972c34ec796880b4b2714401ef7f9ef0e733fee088e5974c9446d389d3e40d gladia.tar.gz 25336
+MD5 e5e9572e5cbca24c976b8091feeb586f ktav-yad.tar.gz 89373
+RMD160 8c8cdb05210b5350785d5a6a333c1ea62b899a6d ktav-yad.tar.gz 89373
+SHA256 ebdeeac393a03ab50eb606ef709ab8d697104bcf284d8e1c5fb5eeaf50fbc888 ktav-yad.tar.gz 89373
+MD5 1e3c28c01fc9a7b40fed694a571034cc ozrad.tar.gz 16709
+RMD160 d63712fe2d32577f51a79a6a1f48914a72262de3 ozrad.tar.gz 16709
+SHA256 088809471bb16f2ea8322b1d4ffcc68336cf70c2db80f9dc4436a7c221ead858 ozrad.tar.gz 16709
