@@ -1,6 +1,11 @@
 # ChangeLog for media-fonts/culmus
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/culmus/ChangeLog,v 1.15 2006/07/11 12:53:47 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/culmus/ChangeLog,v 1.16 2006/08/03 16:29:16 foser Exp $
+
+*culmus-101-r1 (03 Aug 2006)
+
+  03 Aug 2006; Marinus Schraal <foser@gentoo.org> culmus-0.101.ebuild :
+  Install the culmus specific fontconfig config in the correct place (#142619)
 
   11 Jul 2006; Aron Griffis <agriffis@gentoo.org> culmus-0.101.ebuild:
   Mark 0.101 stable on ia64
